Redireccion de recursos de la nuve, para cargarlos desde local.

--- a/src/mapas_base/basemap_list.html
+++ b/src/mapas_base/basemap_list.html
@@ -180,7 +180,7 @@
         			break;
         		case 'Sentinel2':
         			
-        			$.each(['1_NATURAL_COL0R',
+        			$.each(['1-NATURAL-COLOR',
         			        '4_AGRICULTURE',
         							'2_COLOR_INFRARED__VEGETATION_'
         			        ], function( index, value ) {
