--- a/src/mapas_base/sentinel.html
+++ b/src/mapas_base/sentinel.html
@@ -17,7 +17,7 @@
 	<div class="col-sm-12 form-group">
 		<div class="col-sm-8 form-control-static input-sm">
 			<select class="form-control" id="sentinel2-layer-select" onchange="onSelectBaseMap('lyr_sentinel',this);">
-			 	<option value="1_NATURAL_COL0R" selected>Color Natural</option>
+			 	<option value="1-NATURAL-COLOR" selected>Color Natural</option>
       	<option value="2_COLOR_INFRARED__VEGETATION_">Indice de Vegetaci&oacute;n</option>
       	<option value="4_AGRICULTURE">Agricultura</option>
 			</select> 
